# ezfuse

./: .flake8  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: poetry.yml
ezfuse/: __init__.py  cli.py
src/ezfuse/: __init__.py  __main__.py
